--- a/frontend/just-fork/src/app/intranet/components/post-restaurant/post-restaurant.component.html
+++ b/frontend/just-fork/src/app/intranet/components/post-restaurant/post-restaurant.component.html
@@ -28,6 +28,8 @@
     </form>
 </div>
 
+<button routerLink="/auth">redirigir</button>
+
 <input type="file" (change)="onFileSelected($event)">
 <button type="button" (click)="postImage()">Upload</button>
 <button type="button" (click)="delCookie()">Delete</button>
