--- a/frontend/just-fork/src/app/public/home/containers/menu/menu.component.scss
+++ b/frontend/just-fork/src/app/public/home/containers/menu/menu.component.scss
@@ -6,37 +6,24 @@
 
 .all {
     width: 100%;
-    max-width: 1200px;
-    height: 430px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-height: 100vh;
     margin: auto;
 }
 
 .all .card {
-    width: 330px;
-    height: 360px;
+    width: 200px;
+    height: 230px;
     border-radius: 8px;
-    background: blue;
+    background: green;
     box-shadow: 3px 5px 5px rgba($color: #032033, $alpha: 0.5);
     overflow: hidden;
     margin: 20px;
     text-align: center;
-    transition: all 0.25s;
-}
-
-.all .card:hover {
-    transform: translateY(-10px);
-    box-shadow: 3px 12px 16px rgba($color: #032033, $alpha: 0.5);
 }
 
 .img-restaurant {
-    width: 330px;
-    height: 260px;
-}
-
-.card .container {
-    margin-top: 35px;
+    width: 200px;
+    height: 150px;
 }
