--- a/frontend/just-fork/src/app/intranet/components/get-menu/get-menu.component.scss
+++ b/frontend/just-fork/src/app/intranet/components/get-menu/get-menu.component.scss
@@ -27,3 +27,16 @@
     width: 200px;
     height: 150px;
 }
+
+#spinn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+}
+
+#spinn img {
+    width: 250px;
+    height: 250px;
+}
