--- a/frontend/just-fork/src/app/intranet/components/menu/container/intranet-menu.component.html
+++ b/frontend/just-fork/src/app/intranet/components/menu/container/intranet-menu.component.html
@@ -1,4 +1,6 @@
+<app-navI></app-navI>
 <h1>Intranet Menu Component</h1>
+
 <div *ngIf="btn_bool">
     <button (click)="changeBtn()">Agregar un Menu</button>
 </div>
