--- a/frontend/just-fork/src/app/intranet/components/pedidos/components/show-all-pedidos/show-pedidos.component.html
+++ b/frontend/just-fork/src/app/intranet/components/pedidos/components/show-all-pedidos/show-pedidos.component.html
@@ -1,4 +1,11 @@
-<h1>Mostrar Pedido con info {{pedidoId}}</h1>
+<div *ngIf="!visual" id="spinn">
+    <img src="../../../../assets/img/spinner-gif.gif">
+</div>
+
+<div *ngIf="visual">
+    <app-navI></app-navI>
+    <h1>Mostrar Pedido con info {{pedidoId}}</h1>
+</div>
 
 <div *ngIf="visual">
     <div class="all">
