--- a/frontend/just-fork/src/app/intranet/components/my-restaurant/my-restaurant.component.html
+++ b/frontend/just-fork/src/app/intranet/components/my-restaurant/my-restaurant.component.html
@@ -2,6 +2,7 @@
     <img src="../../../../assets/img/spinner-gif.gif">
 </div>
 <div *ngIf="isRegx">
+    <app-navI></app-navI>
     <h1>Pestaña sobre el restaurante</h1>
 </div>
 <div *ngIf="isRegx" class="all">
