--- a/frontend/just-fork/src/app/intranet/components/patch-restaurant/patch-restaurant.component.html
+++ b/frontend/just-fork/src/app/intranet/components/patch-restaurant/patch-restaurant.component.html
@@ -1,4 +1,11 @@
-<h3>Formulario de patch restaurant</h3>
+<div *ngIf="!visual" id="spinn">
+    <img src="../../../../assets/img/spinner-gif.gif">
+</div>
+
+<div *ngIf="visual">
+    <app-navI></app-navI>
+    <h3>Formulario de patch restaurant</h3>
+</div>
 
 <div *ngIf="visual">
     <div *ngIf="form">
