Arreglando bug navbar y terminando los pedidos

--- a/frontend/just-fork/src/app/intranet/navbar/nav.component.html
+++ b/frontend/just-fork/src/app/intranet/navbar/nav.component.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div *ngIf="!islog">
-            <p (click)="logOut()">{{userName}}</p>
+            <p [routerLink]="['/admin/user']">{{userName}}</p>
         </div>
     </div>
 </header>
