--- a/frontend/just-fork/src/app/public/home/containers/home.component.scss
+++ b/frontend/just-fork/src/app/public/home/containers/home.component.scss
@@ -40,3 +40,16 @@
 .card .container {
     margin-top: 35px;
 }
+
+#spinn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+}
+
+#spinn img {
+    width: 250px;
+    height: 250px;
+}
