--- a/frontend/just-fork/src/app/public/login/components/user/user.component.html
+++ b/frontend/just-fork/src/app/public/login/components/user/user.component.html
@@ -1,57 +1,58 @@
+<app-nav></app-nav>
 <div *ngIf="isLogVisible">
-	<h2>Login</h2>
-	<div *ngIf="isLogVisible" class="cobertor-seccion-login">
-		<div class="tabla-login">
-		    <h3>Formulario User</h3>
-		    <form [formGroup]="formGroupLogin" (ngSubmit)="loginProcessUser()">
-			<div>
-			    <input type="text" placeholder="email" formControlName="email">
-			</div>
-			<div>
-			    <input type="password" placeholder="password" formControlName="password">
-			</div>
-			<button class="login" type="submit">LOGIN</button>
-		    </form>
-		    <br>
-		</div>
-	</div>
+    <h2>Login</h2>
+    <div *ngIf="isLogVisible" class="cobertor-seccion-login">
+        <div class="tabla-login">
+            <h3>Formulario User</h3>
+            <form [formGroup]="formGroupLogin" (ngSubmit)="loginProcessUser()">
+                <div>
+                    <input type="text" placeholder="email" formControlName="email">
+                </div>
+                <div>
+                    <input type="password" placeholder="password" formControlName="password">
+                </div>
+                <button class="login" type="submit">LOGIN</button>
+            </form>
+            <br>
+        </div>
+    </div>
 </div>
 
 
 
 <div *ngIf="!isLogVisible">
-	<h2>Register</h2>
-	<div *ngIf="!isLogVisible" class="cobertor-seccion-register">
-		<div class="tabla-register">
-		    <h3>Formulario Registro Usuario</h3>
-		    <form [formGroup]="formGroupRegister" (ngSubmit)="registerProcessUser()">
-			<div>
-			    <input type="text" placeholder="nombre" formControlName="user_name">
-			</div>
-			<div>
-			    <input type="text" placeholder="apellido" formControlName="user_lname">
-			</div>
-			<div>
-			    <input type="text" placeholder="email" formControlName="email">
-			</div>
-			<div>
-			    <input type="password" placeholder="password" formControlName="password">
-			</div>
-			<div>
-			    <input type="text" placeholder="ubication" formControlName="ubication">
-			</div>
-			<button class="register" type="submit">REGISTER</button><br>
-		    </form>
-		    <br>
-		</div>
-	</div>
+    <h2>Register</h2>
+    <div *ngIf="!isLogVisible" class="cobertor-seccion-register">
+        <div class="tabla-register">
+            <h3>Formulario Registro Usuario</h3>
+            <form [formGroup]="formGroupRegister" (ngSubmit)="registerProcessUser()">
+                <div>
+                    <input type="text" placeholder="nombre" formControlName="user_name">
+                </div>
+                <div>
+                    <input type="text" placeholder="apellido" formControlName="user_lname">
+                </div>
+                <div>
+                    <input type="text" placeholder="email" formControlName="email">
+                </div>
+                <div>
+                    <input type="password" placeholder="password" formControlName="password">
+                </div>
+                <div>
+                    <input type="text" placeholder="ubication" formControlName="ubication">
+                </div>
+                <button class="register" type="submit">REGISTER</button><br>
+            </form>
+            <br>
+        </div>
+    </div>
 </div>
 
 <br>
 <div style="text-align: center;">
-	<button *ngIf="!isLogVisible" class="login-register" (click)="changeLogin()">¿Tienes cuenta? Ingresa aqui</button>
-	<!-- <button class="login-register" [disabled]="isLogVisible" (click)="changeLogin()">Login</button> -->
+    <button *ngIf="!isLogVisible" class="login-register" (click)="changeLogin()">¿Tienes cuenta? Ingresa aqui</button>
+    <!-- <button class="login-register" [disabled]="isLogVisible" (click)="changeLogin()">Login</button> -->
 
-	<button *ngIf="isLogVisible" class="login-register" (click)="changeLogin()">¿No tienes cuenta? Registrate aqui</button>
-	<!-- <button *ngIf="!isLogVisible" class="login-register" [disabled]="!isLogVisible" (click)="changeLogin()">Register</button> -->
+    <button *ngIf="isLogVisible" class="login-register" (click)="changeLogin()">¿No tienes cuenta? Registrate aqui</button>
+    <!-- <button *ngIf="!isLogVisible" class="login-register" [disabled]="!isLogVisible" (click)="changeLogin()">Register</button> -->
 </div>
