--- a/frontend/just-fork/src/app/intranet/user/container/user.component.html
+++ b/frontend/just-fork/src/app/intranet/user/container/user.component.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <button (click)="permitirCambio()" *ngIf="cambiar">Cambiar datos</button>
-    <button (click)="permitirCambio()" *ngIf="!cambiar">No modificar gados</button>
+    <button (click)="permitirCambio()" *ngIf="!cambiar">No modificar datos</button>
 </div>
 
 <div div *ngIf="visual">
