--- a/frontend/just-fork/src/app/public/home/containers/home.component.scss
+++ b/frontend/just-fork/src/app/public/home/containers/home.component.scss
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body {
+    background-color: #f7f3f2;
+}
 .all {
     width: 100%;
     max-width: 1200px;
